[package]
name = "rust_undead"
version = "0.1.0"
description = ""
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "rust_undead"

[features]
default = []
custom-heap = []
anchor-debug = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }
ephemeral-rollups-sdk = { version = "0.2.4", features = ["anchor"] }
ephemeral-vrf-sdk = {version = "0.1.2", features = ["anchor"]}


 
[dev-dependencies]
solana-sdk = "1.18.26"
solana-program-test = "1.18.26"
